--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "concurrently": "^7.0.0",
+    "moment": "^2.29.2",
     "prop-types": "^15.6.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
