--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "post-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/MikhailShokun/COMMENTS-LIST",
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -12,7 +11,6 @@
     "axios": "^0.26.1",
     "concurrently": "^7.0.0",
     "moment": "^2.29.2",
-    "prop-types": "^15.6.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.29.0",
@@ -26,7 +24,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -w db.json -p 3001"
+    "server": "json-server -w db.json -p 3001",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.4.0"
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "gh-pages": "^3.2.3"
   }
 }
